--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
       "@babel/plugin-proposal-object-rest-spread",
       "@babel/plugin-proposal-class-properties",
       [
-      "@babel/plugin-transform-runtime"
+        "@babel/plugin-transform-runtime"
       ]
     ]
   },
@@ -58,6 +58,8 @@
     "express-validator": "^5.3.1",
     "file-loader": "^6.2.0",
     "flash": "^1.1.0",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
     "mini-css-extract-plugin": "^1.3.9",
     "mongoose": "^5.12.0",
     "multer": "^1.4.2",
