--- a/package.json
+++ b/package.json
@@ -76,5 +76,8 @@
     "webpack": "^5.25.1",
     "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
