--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "css-loader": "^5.1.2",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^7.0.1",
@@ -67,6 +68,7 @@
     "passport-local": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-player": "^2.9.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
