--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mini-css-extract-plugin": "^1.3.9",
     "mongoose": "^5.12.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.7.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "postcss": "^8.3.11",
